<resources>
    <string name="app_name">SMSBulter.</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_messages">Responses</string>
    <string name="title_add">New Response</string>
    <string name="responses_test">Responses</string>
    <string name="messages_test">My first automatic SMS response is this dad a da dad ada d ad ada da d ad adada da d ada</string>
    <string name="contacts_test">contacts_test</string>
    <string name="title_settings">Settings</string>
    <string name="Enter_SMS_Response">Enter SMS Response</string>
    <string name="auto_reply_on">Auto-Reply</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="response_prompt">Enter Message</string>
    <string name="add_new_response_title">Add Response</string>
    <string name="edit_response_title">Edit Response</string>
    <string name="delete">Delete</string>
    <string name="active_responses">Replies</string>
    <string name="active_replies">Active</string>
    <string name="other_replies">Other</string>
    <string name="additional_replies">Additional</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="Automatic">Automatic</string>
    <string name="no_active_reply_selected">No active reply selected</string>
</resources>